add scripts for checking and updating Go/Alpine versions (#309)
* update to Alpine 3.14.5 for CVE-2022-0778

* add scripts for checking and updating Go/Alpine versions

* also make sure the Docker images really exist

* update CONTRIBUTING.md

* fix file rename

* revert patches that are now included in Alpine 3.14.5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -270,6 +270,10 @@ jobs:
       - setup_remote_docker  # start docker engine
 
       - run:
+          name: verify Go and Alpine versions
+          command: ./scripts/verify-release-versions.sh
+
+      - run:
           name: add package source for Trivy
           command: |
             sudo apt-get install wget apt-transport-https gnupg lsb-release
