--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -7,6 +7,7 @@ FROM alpine:3.16.0
 
 RUN apk add --no-cache \
     ca-certificates \
+ && apk add --upgrade libcrypto1.1 libssl1.1 \
  && update-ca-certificates \
  && rm -rf /var/cache/apk/*
 
