ci: publish distroless images (#385)
We've had a long history of Alpine vulnerability reports on Relay's
Docker images. The patches percolate into the upstream tools that are
bundled in Alpine, then into Alpine, then into the Alpine docker image
release, and finally into a Relay release.

Since Relay is a simple Go binary, we could take advantage of Google's
"distroless" container system. This is an extremely stripped down
debian12 image with "just" the Go binary. The attack surface is smaller
and we'd have less necessary maintenance.

This PR adds two new image manifests: 
- `static-debian12-nonroot` (based on
`gcr.io/distroless/static-debian12:nonroot`)
- `static-debian12-debug-nonroot` (based on
`gcr.io/distroless/static-debian12:debug-nonroot`).

Each manifest supports amd64, armv7, and armv8 architectures. There is
additional support for `ppc64le` and `s390x` in those base images, but I
haven't exposed them here yet in order to give a similar offering to the
Alpine image (note: we're missing `i386`.)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,8 @@ jobs:
         run:
           echo "value=$(jq -r '.version' < dist/metadata.json)" >> $GITHUB_OUTPUT
       - uses: aquasecurity/trivy-action@master
+        id: scan-alpine
+        continue-on-error: true
         with:
           # Using an explicit tag rather than ld-relay:latest to ensure we're scanning the local image that we just built.
           # It's not clear why, but it seems goreleaser doesn't create the :latest tag when skipping the publish step
@@ -72,3 +74,22 @@ jobs:
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
+      - uses: aquasecurity/trivy-action@master
+        id: scan-distroless
+        continue-on-error: true
+        with:
+          image-ref: launchdarkly/ld-relay:${{ steps.image-tag.outputs.value }}-static-debian12-nonroot-amd64
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+      - uses: aquasecurity/trivy-action@master
+        continue-on-error: true
+        id: scan-debug-distroless
+        with:
+          image-ref: launchdarkly/ld-relay:${{ steps.image-tag.outputs.value }}-static-debian12-debug-nonroot-amd64
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+      - name: Fail if any of scan-alpine, scan-distroless, or scan-distroless-debug failed
+        if: ${{ steps.scan-alpine.outcome != 'success' || steps.scan-distroless.outcome != 'success' || steps.scan-debug-distroless.outcome != 'success' }}
+        run: exit 1
