--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -63,6 +63,7 @@ release:
   # (we want Releaser to be responsible for doing all the GitHub release manipulations)
 
 dockers:
+  # The following templates are for the Alpine-based image.
   # i386
   - image_templates:
     - "launchdarkly/ld-relay:{{ .Version }}-i386"
@@ -119,14 +120,107 @@ dockers:
     build_flag_templates:
     - "--pull"
     - "--platform=linux/arm64/v8"
+
+  ## The following image templates are for the nonroot debian12 distroless image.
+
+  # AMD64
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-amd64"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-amd64"
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-amd64"
+    use: buildx
+    goos: linux
+    goarch: amd64
+    dockerfile: Dockerfile-static-debian12-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/amd64"
+
+  # ARMv7
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-armv7"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-armv7"
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-armv7"
+    use: buildx
+    goos: linux
+    goarch: arm
+    goarm: 7
+    dockerfile: Dockerfile-static-debian12-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/arm/v7"
+
+  # ARM64v8
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-arm64v8"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-arm64v8"
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-arm64v8"
+    use: buildx
+    goos: linux
+    goarch: arm64
+    dockerfile: Dockerfile-static-debian12-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/arm64/v8"
+
+  ## The following image templates are for the debug nonroot debian12 distroless image. This image is
+  ## necessary to get a shell in the container for debugging purposes.
+
+  # AMD64
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-amd64"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-amd64"
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-amd64"
+    use: buildx
+    goos: linux
+    goarch: amd64
+    dockerfile: Dockerfile-static-debian12-debug-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/amd64"
+
+  # ARMv7
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-armv7"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-armv7"
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-armv7"
+    use: buildx
+    goos: linux
+    goarch: arm
+    goarm: 7
+    dockerfile: Dockerfile-static-debian12-debug-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/arm/v7"
+
+  # ARM64v8
+  - image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-arm64v8"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-arm64v8"
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-arm64v8"
+    use: buildx
+    goos: linux
+    goarch: arm64
+    dockerfile: Dockerfile-static-debian12-debug-nonroot.goreleaser
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--platform=linux/arm64/v8"
+
 docker_manifests:
+  # For the Alpine image
   - name_template: "launchdarkly/ld-relay:{{ .Version}}"
     skip_push: false
     image_templates:
-     - "launchdarkly/ld-relay:{{ .Version }}-amd64"
-     - "launchdarkly/ld-relay:{{ .Version }}-armv7"
-     - "launchdarkly/ld-relay:{{ .Version }}-arm64v8"
-     - "launchdarkly/ld-relay:{{ .Version }}-i386"
+      - "launchdarkly/ld-relay:{{ .Version }}-amd64"
+      - "launchdarkly/ld-relay:{{ .Version }}-armv7"
+      - "launchdarkly/ld-relay:{{ .Version }}-arm64v8"
+      - "launchdarkly/ld-relay:{{ .Version }}-i386"
 
   - name_template: "launchdarkly/ld-relay:v{{ .Major }}"
     skip_push: false
@@ -143,3 +237,47 @@ docker_manifests:
       - "launchdarkly/ld-relay:latest-armv7"
       - "launchdarkly/ld-relay:latest-arm64v8"
       - "launchdarkly/ld-relay:latest-i386"
+
+  # For the static debian12 image
+  - name_template: "launchdarkly/ld-relay:latest-static-debian12-nonroot"
+    skip_push: false
+    image_templates:
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-amd64"
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-armv7"
+      - "launchdarkly/ld-relay:latest-static-debian12-nonroot-arm64v8"
+
+  - name_template: "launchdarkly/ld-relay:{{ .Version}}-static-debian12-nonroot"
+    skip_push: false
+    image_templates:
+       - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-amd64"
+       - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-armv7"
+       - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-nonroot-arm64v8"
+
+  - name_template: "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot"
+    skip_push: false
+    image_templates:
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-amd64"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-armv7"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-nonroot-arm64v8"
+
+  # For the debug static debian12 image
+  - name_template: "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot"
+    skip_push: false
+    image_templates:
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-amd64"
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-armv7"
+      - "launchdarkly/ld-relay:latest-static-debian12-debug-nonroot-arm64v8"
+
+  - name_template: "launchdarkly/ld-relay:{{ .Version}}-static-debian12-debug-nonroot"
+    skip_push: false
+    image_templates:
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-amd64"
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-armv7"
+      - "launchdarkly/ld-relay:{{ .Version }}-static-debian12-debug-nonroot-arm64v8"
+
+  - name_template: "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot"
+    skip_push: false
+    image_templates:
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-amd64"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-armv7"
+      - "launchdarkly/ld-relay:v{{ .Major }}-static-debian12-debug-nonroot-arm64v8"
